--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -17,7 +17,7 @@
   <label>and/or, create a new pet:</label>
     <br></br>
     <label>Name:</label>
-      <input  type="text" name='pet[name]'></input>
+      <input  type="text" name='pet[name]'>
     <br></br>
   <input type="submit" value="Create Owner">
 </form>
